--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -147,7 +147,7 @@ top: 15px;
          <h1 style="font-family: 'Exo 2', sans-serif; text-align: left; color: #010b48; font-size: 25px;" class="js-reveal">Welcome to Hydro4life</h1>
         <hr align="left" width="10%" class="divederlined">
            <p style="font-weight: 300; font-size: 14px; text-align: left; color: #000000; font-family: 'Exo 2', sans-serif;" class="js-reveal">
-           THYDRO4LIFE is a non-profit charity organization with the sole objective of stimulating community development to ultimately bring about social change through our flagship activity of constructing boreholes and providing education on water sanitation.
+           HYDRO4LIFE is a non-profit charity organization with the sole objective of stimulating community development to ultimately bring about social change through our flagship activity of constructing boreholes and providing education on water sanitation.
 		   Using community participatory approach, we engage members of an identified community to ascertain if they have a need for clean and safe water. This engagement is to solicit the inputs of traditional leaders and members of the community to make them feel included in the process, own the project and ultimately be able to maintain the project after completion.
 		   To ensure effective maintenance of projects, we appoint a correspondent who is a resident of the beneficiary community to give us periodical update on the state of the borehole and other water sanitation-related matters.
 		  </p>
