--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -339,7 +339,7 @@ box-shadow: 0px 1px 3px 2px rgba(0,0,0,0.09);
         <div class="col-lg-6">
           <div class="innerfooter">
             <h5 class="foothead">Receive Our Updates</h5>
-            <p style="font-family: 'Raleway', sans-serif; letter-spacing: 2px; text-shadow: 0px 4px 7px rgba(150, 150, 150, 0.65);text-align: left; font-weight: 300; color: #ffffff;">In commodo incididunt ea laborum do voluptate eiusmod sunt commodo quis esse sunt in dolor cillum esse sint est et voluptate.</p><br>
+            <p style="font-family: 'Raleway', sans-serif; font-size: 14px; text-align: left; font-weight: 300; color: #ffffff;">HYDRO4LIFE is a non-profit charity organization with the sole objective of stimulating community development to ultimately bring about social change through our flagship activity of constructing boreholes and providing education on water sanitation.</p><br>
             <form class="form-inline" style="font-family: 'Raleway', sans-serif;">
 			  <div class="form-group mb-2">
 			    <label for="staticEmail2" class="sr-only">Name</label>
