--- a/app/views/static_pages/pendingprojects.html.erb
+++ b/app/views/static_pages/pendingprojects.html.erb
@@ -18,6 +18,33 @@
 	  background-color: #ffffff; 
 	}
 
+	.donate {
+		background-color: #282896;
+		border: 1px solid #282896;
+		border-radius: 0px;
+		color: white;
+	}
+
+	.donate:hover {
+		background-color: #282896;
+		border: 1px solid #282896;
+		border-radius: 0px;
+		color: white;
+		 -webkit-box-shadow: 0px 0px 20px 7px rgba(0,0,0,0.22);
+	  -moz-box-shadow: 0px 0px 20px 7px rgba(0,0,0,0.22);
+	  box-shadow: 0px 0px 20px 7px rgba(0,0,0,0.22);
+	}
+
+	.donate:active {
+		background-color: #282896;
+		border: 1px solid #282896;
+		border-radius: 0px;
+		color: white;
+		 -webkit-box-shadow: 0px 0px 10px 7px rgba(0,0,0,0.12);
+	  -moz-box-shadow: 0px 0px 10px 7px rgba(0,0,0,0.12);
+	  box-shadow: 0px 0px 10px 7px rgba(0,0,0,0.12);
+	}
+
 </style>
 
 <section class="holdprojbody">
@@ -30,8 +57,8 @@
 				<br>
 				<h2 style="font-family: 'Exo 2', sans-serif; text-align: left; color: #282896; font-size: 25px;">Pending Projects</h2>
 				 <hr align="left" width="10%" class="divederlined">
-				 <p>Construction of mechanized boreholes and an education on water conservation in Gomoa Osedze.</p>
-				 <p style="font-size: 16px;">
+				 <p style="font-weight: 300;">Construction of mechanized boreholes and an education on water conservation in Gomoa Osedze.</p>
+				 <p style="font-size: 16px; font-weight: 300;">
 				 	<span><i class="fa fa-globe" style="margin-right: 9px; color: #282896;" aria-hidden="true"></i>
 				 	Central Region, Ghana</span><br>
 				 	<span><i class="fa fa-users" style="margin-right: 9px; color: #282896;" aria-hidden="true"></i>
@@ -39,15 +66,15 @@
 				 	</span>
 				 </p>
 				 <br>
-				 <p>Construction of mechanized boreholes in Ajumako-Esamang.</p>
-				 <p style="font-size: 16px;">
+				 <p style="font-weight: 300;">Construction of mechanized boreholes in Ajumako-Esamang.</p>
+				 <p style="font-size: 16px; font-weight: 300;">
 				 	<span><i class="fa fa-globe" style="margin-right: 9px; color: #282896;" aria-hidden="true"></i>
 				 	Central Region, Ghana</span><br>
 				 	<span><i class="fa fa-users" style="margin-right: 9px; color: #282896;" aria-hidden="true"></i>
 				 		6500 people
 				 	</span>
 				 </p>
-				 <a class="btn btn-success btn-lg" href="https://rave.flutterwave.com/donate/lnzildnxte7v" target="_blank">Donate to these Projects</a>
+				 	<a class="btn btn-success donate btn-lg" href="https://rave.flutterwave.com/donate/lnzildnxte7v" target="_blank">Donate to these Projects</a>
 			</div>
 		</div>
 
