--- a/app/views/static_pages/aboutus.html.erb
+++ b/app/views/static_pages/aboutus.html.erb
@@ -104,6 +104,30 @@
        Using community participatory approach, we engage members of an identified community to ascertain if they have a need for clean and safe water. This engagement is to solicit the inputs of traditional leaders and members of the community to make them feel included in the process, own the project and ultimately be able to maintain the project after completion.<br>
        To ensure effective maintenance of projects, we appoint a correspondent who is a resident of the beneficiary community to give us periodical update on the state of the borehole and other water sanitation-related matters.
            </p>
+           <br>
+           <h2 style="font-family: 'Exo 2', sans-serif; text-align: left; color: #282896; font-size: 25px;" class="js-reveal">
+         What we stand for</h2>
+         <hr align="left" width="10%" class="divederlined">
+         <p style="font-weight: 300;">
+           <span style="color: #282896; font-weight: 600;">Vision</span><br>
+           To provide clean and safe water to as many water-deprived African communities as possible.
+         </p>
+         <p>
+           <span style="color: #282896; font-weight: 600;">Mission</span><br>
+         </p>
+         <ul style="font-weight: 300;">
+           <li>To drill mechanized boreholes for clean and safe water to deprived African communities.</li>
+           <li>To provide education on water hygiene, treatment and conservation.</li>
+           <li>To empower and assist deprived communities to execute self-funded water projects.</li>
+         </ul>
+         <p>
+           <span style="color: #282896; font-weight: 600;">Core values</span><br>
+         </p>
+         <ul style="font-weight: 300;">
+           <li>An environment to educate tomorrow’s leaders.</li>
+           <li>Service to humanity.</li>
+           <li>Making others smile.</li>
+         </ul>
           </div>
           <div class="col-lg-3 col-sm-12">
             <img src="https://res.cloudinary.com/nikasemo/image/upload/v1563160900/h4llogoweb_hgwpw1.jpg" width="200px" height="200px" class="img-fluid">
