--- a/app/views/static_pages/contactus.html.erb
+++ b/app/views/static_pages/contactus.html.erb
@@ -17,7 +17,7 @@
 				<p>
                 <span><i class="fa fa-phone" aria-hidden="true"></i></span><span style="font-weight: 300;"> 6147984100</span><br>
                 <span><i class="fa fa-whatsapp" aria-hidden="true"></i></span><span style="font-weight: 300;"> 6147984100</span><br>
-                <span><i class="fa fa-envelope" aria-hidden="true"></i></span><span style="font-weight: 300;">  beablessingm@beablessingm.org</span><br>
+                <span><i class="fa fa-envelope" aria-hidden="true"></i></span><span style="font-weight: 300;"> info@hydro4life.org</span><br>
                 <span><i class="fa fa-map-marker" aria-hidden="true"></i></span><span style="font-weight: 300;"> 6195 Emerald Parkway One North Dublin, OH 43016</span><br>
 				</p>
 				<p>
