--- a/app/views/static_pages/aboutus.html.erb
+++ b/app/views/static_pages/aboutus.html.erb
@@ -130,7 +130,7 @@
          </ul>
           </div>
           <div class="col-lg-3 col-sm-12">
-            <img src="https://res.cloudinary.com/nikasemo/image/upload/v1563160900/h4llogoweb_hgwpw1.jpg" width="200px" height="200px" class="img-fluid">
+            <img src="https://res.cloudinary.com/nikasemo/image/upload/v1563477086/h4llogoweb2_zxuedz.png" width="200px" height="200px" class="img-fluid">
           </div>
         </div>
       </div>
