--- a/app/views/static_pages/completedprojects.html.erb
+++ b/app/views/static_pages/completedprojects.html.erb
@@ -82,6 +82,88 @@
 				  Your browser does not support HTML5 video.
 				</video>
 
+				<div class="row">
+					<!-- Sub images -->
+		          <div class="col-lg-12">
+		            <div class="row no-gutters" style="margin-top: 10px; margin-bottom: 0px;">
+		               <a href="hl/hl1.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl1thumb.jpg" class="img-fluid">
+		                </a> 
+
+		                <a href="hl/hl2.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl2thumb.jpg" class="img-fluid">
+		                </a> 
+
+		                <a href="hl/hl3.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl3thumb.jpg" class="img-fluid">
+		                </a> 
+
+		                <a href="hl/hl4.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl4thumb.jpg" class="img-fluid">
+		                </a> 
+
+		            </div>
+
+		            <div class="row no-gutters" style="margin-top: 10px; margin-bottom: 0px;">
+		               <a href="hl/hl5.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl5thumb.jpg" class="img-fluid">
+		                </a> 
+
+		                <a href="hl/hl6.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl6thumb.jpg" class="img-fluid">
+		                </a> 
+
+		                <a href="hl/hl7.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl7thumb.jpg" class="img-fluid">
+		                </a> 
+
+		                <a href="hl/hl8.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl8thumb.jpg" class="img-fluid">
+		                </a> 
+
+		            </div>
+
+		            <div class="row no-gutters" style="margin-top: 10px; margin-bottom: 0px;">
+		               <a href="hl/hl9.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl9thumb.jpg" class="img-fluid">
+		                </a> 
+
+		                <a href="hl/hl10.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl10thumb.jpg" class="img-fluid">
+		                </a> 
+
+		                <a href="hl/hl11.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl11thumb.jpg" class="img-fluid">
+		                </a> 
+
+		                <a href="hl/hl12.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl12thumb.jpg" class="img-fluid">
+		                </a> 
+
+		            </div>
+
+		             <div class="row no-gutters" style="margin-top: 10px; margin-bottom: 20px;">
+		               <a href="hl/hl13.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl13thumb.jpg" class="img-fluid">
+		                </a> 
+
+		                <a href="hl/hl14.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl14thumb.jpg" class="img-fluid">
+		                </a> 
+
+		                <a href="hl/hl15.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl15thumb.jpg" class="img-fluid">
+		                </a> 
+
+		                <a href="hl/hl16.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-3 col-3" style="margin-bottom: 0px;">
+		                <img src="hl/hl16thumb.jpg" class="img-fluid">
+		                </a> 
+
+		            </div>
+
+		          </div>
+				</div>
+
 				<p style="margin-top: 20px;">
 					<a class="btn btn-success donate btn-lg" href="https://rave.flutterwave.com/donate/lnzildnxte7v" target="_blank">Donate to Hydo4Life</a>
 				</p>
