--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -259,8 +259,7 @@ box-shadow: 0px 1px 3px 2px rgba(0,0,0,0.09);
 
   	<nav class="navbar navbar-light navbar-expand-lg fixed-top navbackground">
       <div class="container">
-        <a class="navbar-brand1" href="/" style=""><img src="https://res.cloudinary.com/nikasemo/image/upload/v1563155759/h4life_rjqf6d.png" style=" margin-right:3px; width: 52px; height: 70px;">
-          <span style="position:relative; top: 0px; color: #282896;">Hydro4Life</span></a>
+        <a class="navbar-brand1" href="/" style=""><img src="https://res.cloudinary.com/nikasemo/image/upload/v1563466240/h4llogoweb_jjx7wf.png" style="margin-right:3px; width: 70px; height: 70px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -310,6 +309,8 @@ box-shadow: 0px 1px 3px 2px rgba(0,0,0,0.09);
             <li class="nav-item">
               <a class="nav-link <%= 'active' if current_page?(contactus_path) %>" href="/contactus">Contact Us</a>
             </li>
+
+            
             
           </ul>
            <ul class="navbar-nav ml-auto">
@@ -417,6 +418,16 @@ box-shadow: 0px 1px 3px 2px rgba(0,0,0,0.09);
       
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js.map"></script>
+
 <%= javascript_include_tag 'scroll-reveal.js' %>
+
+
+<script type="text/javascript">
+  $(document).on('click', '[data-toggle="lightbox"]', function(event) {
+                event.preventDefault();
+                $(this).ekkoLightbox();
+            });
+</script>
+
   </body>
 </html>
