--- a/app/views/static_pages/completedprojects.html.erb
+++ b/app/views/static_pages/completedprojects.html.erb
@@ -78,7 +78,7 @@
 		<div class="col-lg-6">
 			<div class="holdprojimage2" style="margin-top: 40px;">
 				<video width="100%" controls>
-				  <source src="https://res.cloudinary.com/nikasemo/video/upload/v1563470657/WhatsApp_Video_2019-07-10_at_12.26.13_PM_n2zpud.mp4" type="video/mp4">
+				  <source src="https://res.cloudinary.com/nikasemo/video/upload/v1564666022/h4lifeconverted_iuainl.mp4" type="video/mp4">
 				  Your browser does not support HTML5 video.
 				</video>
 
