--- a/app/views/static_pages/completedprojects.html.erb
+++ b/app/views/static_pages/completedprojects.html.erb
@@ -165,7 +165,7 @@
 				</div>
 
 				<p style="margin-top: 20px;">
-					<a class="btn btn-success donate btn-lg" href="https://rave.flutterwave.com/donate/lnzildnxte7v" target="_blank">Donate to Hydo4Life</a>
+					<a class="btn btn-success donate btn-lg" href="/donate" target="_blank">Donate to Hydo4Life</a>
 				</p>
 			</div>
 			</div>
@@ -208,7 +208,7 @@
 				</div>
 
 				<p style="margin-top: 20px;">
-					<a class="btn btn-success donate btn-lg" href="https://rave.flutterwave.com/donate/lnzildnxte7v" target="_blank">Donate to Hydo4Life</a>
+					<a class="btn btn-success donate btn-lg" href="/donate" target="_blank">Donate to Hydo4Life</a>
 				</p>
 			</div>
 			</div>
