--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -239,6 +239,33 @@ box-shadow: 0px 1px 3px 2px rgba(0,0,0,0.09);
   font-family: 'Exo 2', sans-serif;
 }
 
+.donate {
+		background-color: #282896;
+		border: 1px solid #282896;
+		border-radius: 0px;
+		color: white;
+	}
+
+	.donate:hover {
+		background-color: #282896;
+		border: 1px solid #282896;
+		border-radius: 0px;
+		color: white;
+		 -webkit-box-shadow: 0px 0px 20px 7px rgba(0,0,0,0.22);
+	  -moz-box-shadow: 0px 0px 20px 7px rgba(0,0,0,0.22);
+	  box-shadow: 0px 0px 20px 7px rgba(0,0,0,0.22);
+	}
+
+	.donate:active {
+		background-color: #282896;
+		border: 1px solid #282896;
+		border-radius: 0px;
+		color: white;
+		 -webkit-box-shadow: 0px 0px 10px 7px rgba(0,0,0,0.12);
+	  -moz-box-shadow: 0px 0px 10px 7px rgba(0,0,0,0.12);
+	  box-shadow: 0px 0px 10px 7px rgba(0,0,0,0.12);
+	}
+
 @media only screen and (min-width : 100px) and (max-width : 600px) {
 
 .navbar-brand1 {
@@ -315,7 +342,7 @@ box-shadow: 0px 1px 3px 2px rgba(0,0,0,0.09);
           </ul>
            <ul class="navbar-nav ml-auto">
            	<li class="nav-item">
-              <a class="btn btn-primary btn-lg donatebutton" href="https://rave.flutterwave.com/donate/lnzildnxte7v" target="_blank">Donate</a>
+              <a class="btn btn-primary btn-lg donatebutton" href="/donate" target="_blank">Donate</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#!" target="_blank"><span><i class="fa fa-facebook-official" style="margin-left: 9px; color: #2be0f5;" aria-hidden="true"></i></span></a>
