--- a/app/views/static_pages/pendingprojects.html.erb
+++ b/app/views/static_pages/pendingprojects.html.erb
@@ -18,32 +18,7 @@
 	  background-color: #ffffff; 
 	}
 
-	.donate {
-		background-color: #282896;
-		border: 1px solid #282896;
-		border-radius: 0px;
-		color: white;
-	}
-
-	.donate:hover {
-		background-color: #282896;
-		border: 1px solid #282896;
-		border-radius: 0px;
-		color: white;
-		 -webkit-box-shadow: 0px 0px 20px 7px rgba(0,0,0,0.22);
-	  -moz-box-shadow: 0px 0px 20px 7px rgba(0,0,0,0.22);
-	  box-shadow: 0px 0px 20px 7px rgba(0,0,0,0.22);
-	}
-
-	.donate:active {
-		background-color: #282896;
-		border: 1px solid #282896;
-		border-radius: 0px;
-		color: white;
-		 -webkit-box-shadow: 0px 0px 10px 7px rgba(0,0,0,0.12);
-	  -moz-box-shadow: 0px 0px 10px 7px rgba(0,0,0,0.12);
-	  box-shadow: 0px 0px 10px 7px rgba(0,0,0,0.12);
-	}
+	
 
 </style>
 
@@ -74,7 +49,7 @@
 				 		6500 people
 				 	</span>
 				 </p>
-				 	<a class="btn btn-success donate btn-lg" href="https://rave.flutterwave.com/donate/lnzildnxte7v" target="_blank">Donate to these Projects</a>
+				 	<a class="btn btn-success donate btn-lg" href="/donate" target="_blank">Donate to these Projects</a>
 			</div>
 		</div>
 
