--- a/app/views/static_pages/donate.html.erb
+++ b/app/views/static_pages/donate.html.erb
@@ -106,7 +106,7 @@
        
            </p>
            <p style="margin-top: 20px;">
-          <a class="btn btn-success donate btn-lg" href="https://rave.flutterwave.com/donate/lnzildnxte7v" target="_blank">Donate to Hydo4Life</a>
+          <a class="btn btn-success donate btn-lg" href="https://rave.flutterwave.com/donate/q9rb9o7hqyu9" target="_blank">Donate to Hydo4Life</a>
         </p>
 
         <p style="font-weight: 300; font-size: 14px; text-align: left; color: #000000; font-family: 'Exo 2', sans-serif;">
