--- a/app/views/static_pages/completedprojects.html.erb
+++ b/app/views/static_pages/completedprojects.html.erb
@@ -67,7 +67,7 @@
 				 		2000 people
 				 	</span>
 				 	<br><br>
-				 	In September 2018, HYDRO4LIFE constructed a mechanized borehole for the people of Kachawula, a village in the Brong Ahafo Region (now Bono East Region) in Ghana, West Africa. This community has about 2,000 people and they relied on a river as their source of water for domestic purposes. Animals also drunk from this same water source.<br><br>
+				 	In September 2018, HYDRO4LIFE constructed a mechanized borehole for the people of Kachawula, a village in the Brong Ahafo Region (now Bono East Region) in Ghana, West Africa. This community has about 2,000 people and they relied on a river as their source of water for domestic purposes. Animals also drank from this same water source.<br><br>
 					In September 2018, the crew from hydro4life arrived in Kachawula and constructed a mechanized borehole following an initial engagement with the leadership and members of the community.<br><br>
 					After successful drilling of the borehole and installation of water tanks and pipes, water started flowing and the people of Kachawula couldn’t hide their joy. The smiles on the faces of these men, women and especially children was what made us feel fulfilled and gave us the inspiration to consider doing more projects. This was our first success story and to us it’s the success of humanity because it put smiles on the faces of the people of Kachawula.
 				 </p>
@@ -79,6 +79,16 @@
 			<div class="holdprojimage2" style="margin-top: 40px;">
 				<video width="100%" controls>
 				  <source src="https://res.cloudinary.com/nikasemo/video/upload/v1564666022/h4lifeconverted_iuainl.mp4" type="video/mp4">
+				  Your browser does not support HTML5 video.
+				</video>
+				<h4 style="margin-top: 20px; margin-bottom: 10px;">Project Video 2</h4>
+				<video width="100%" controls>
+				  <source src="https://res.cloudinary.com/nikasemo/video/upload/v1563470657/WhatsApp_Video_2019-07-10_at_12.26.13_PM_n2zpud.mp4" type="video/mp4">
+				  Your browser does not support HTML5 video.
+				</video>
+				<h4 style="margin-top: 20px; margin-bottom: 10px;">Project Video 3</h4>
+				<video width="100%" controls>
+				  <source src="https://res.cloudinary.com/nikasemo/video/upload/v1565181648/final_5d4ac698504fd40014e1c35c_975061_bm2hpr.mp4" type="video/mp4">
 				  Your browser does not support HTML5 video.
 				</video>
 
@@ -165,7 +175,7 @@
 				</div>
 
 				<p style="margin-top: 20px;">
-					<a class="btn btn-success donate btn-lg" href="/donate" target="_blank">Donate to Hydo4Life</a>
+					<a class="btn btn-success donate btn-lg" href="/donate">Donate to Hydo4Life</a>
 				</p>
 			</div>
 			</div>
@@ -189,7 +199,7 @@
 				 	</span>
 				 	<br><br>
 				 	In April 2019, HYDRO4LIFE embarked on a sensitization exercise on water treatment and sanitation-related issues. We taught the people of Gomoa Osedze traditional water treatment methods and how to prevent water contamination.<br><br> 
-                    This exercise was necessitated by the absence of clean and safe drinking water in the community. We derive joy in the knowledge that the people are now aware of simple ways to treat water before drinking and how to prevent water contamination and by extension water-borne diseases.
+                    This exercise was necessitated by the absence of clean and safe drinking water in the community. We derive joy in the knowledge that the people are now aware of simple ways to treat water before drinking and how to prevent water contamination and, by extension, water-borne diseases.
 				 </p>
 				 <br>
 				 
@@ -208,7 +218,7 @@
 				</div>
 
 				<p style="margin-top: 20px;">
-					<a class="btn btn-success donate btn-lg" href="/donate" target="_blank">Donate to Hydo4Life</a>
+					<a class="btn btn-success donate btn-lg" href="/donate">Donate to Hydo4Life</a>
 				</p>
 			</div>
 			</div>
