--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -242,7 +242,7 @@ zoomin img {
            <p style="font-weight: 300; font-size: 14px; text-align: left; line-height: 25px; color: #000000; font-family: 'Exo 2', sans-serif;" class="js-reveal">
            HYDRO4LIFE is a non-profit charity organization with the sole objective of stimulating community development to ultimately bring about social change through our flagship activity of constructing boreholes and providing education on water sanitation.<br>
 		   Using community participatory approach, we engage members of an identified community to ascertain if they have a need for clean and safe water. This engagement is to solicit the inputs of traditional leaders and members of the community to make them feel included in the process, own the project and ultimately be able to maintain the project after completion.<br>
-		   To ensure effective maintenance of projects, we appoint a correspondent who is a resident of the beneficiary community to give us periodical update on the state of the borehole and other water sanitation-related matters.
+		   To ensure effective maintenance of projects, we appoint a correspondent who is a resident of the beneficiary community to give us periodical updates on the state of the borehole and other water sanitation-related matters.
 		  </p>
           </div>
           <div class="col-lg-3 col-sm-12">
@@ -258,7 +258,7 @@ zoomin img {
     	 <h1 style="font-family: 'Exo 2', sans-serif; text-align: center; margin-top: 30px; color: #282896; font-size: 25px;" class="js-reveal">Our Projects</h1>
         <hr align="center" width="10%" class="divederlined">
            <p style="font-weight: 300; font-size: 14px; text-align: center; line-height: 25px; color: #000000; font-family: 'Exo 2', sans-serif;" class="js-reveal">
-           HYDRO4LIFE has set on its mind to build boreholes and give people in rural Africa access to clean potable water.
+           HYDRO4LIFE has set out to build boreholes and give people in rural Africa access to clean potable water.
 		  </p>
 
     	<div class="container">
