--- a/app/views/static_pages/pendingprojects.html.erb
+++ b/app/views/static_pages/pendingprojects.html.erb
@@ -24,13 +24,59 @@
 
 <section class="holdprojbody">
 
-
-	<div class="row no-gutters" style="margin-top: 90px; margin-bottom: 0px;">
+	<div class="container">
+	<div class="row no-gutters" style="margin-top: 100px; margin-bottom: 0px;">
 
 		<div class="col-lg-6">
 			<div class="holdprojtext">
 				<br>
 				<h2 style="font-family: 'Exo 2', sans-serif; text-align: left; color: #282896; font-size: 25px;">Pending Projects</h2>
+				 <hr align="left" width="10%" class="divederlined">
+				 <p style="font-weight: 500;">Construction of mechanized boreholes and an education on water conservation in Gomoa Osedze.</p>
+				 <p style="font-size: 16px; font-weight: 300;">
+				 	<span><i class="fa fa-globe" style="margin-right: 9px; color: #282896;" aria-hidden="true"></i>
+				 	Central Region, Ghana</span><br>
+				 	<span><i class="fa fa-users" style="margin-right: 9px; color: #282896;" aria-hidden="true"></i>
+				 		5000 people
+				 	</span>
+				 </p>
+				 <br>
+				 <p style="font-weight: 500;">Construction of mechanized boreholes in Ajumako-Esamang.</p>
+				 <p style="font-size: 16px; font-weight: 300;">
+				 	<span><i class="fa fa-globe" style="margin-right: 9px; color: #282896;" aria-hidden="true"></i>
+				 	Central Region, Ghana</span><br>
+				 	<span><i class="fa fa-users" style="margin-right: 9px; color: #282896;" aria-hidden="true"></i>
+				 		6500 people
+				 	</span>
+				 </p>
+				 <br>
+				 <p style="font-weight: 500;">Supporting Orphanages accross the country.</p>
+				 <p style="font-size: 16px; font-weight: 300;">
+				 	<span><i class="fa fa-globe" style="margin-right: 9px; color: #282896;" aria-hidden="true"></i>
+				 	West Africa, Ghana</span><br>
+				 	<span>
+				 		As part of our quest to put smiles on the faces of the needy, Hydro4Life intends to touch the lives of underprivileged orphans in rural African communities. This project will focus specifically on supporting orphanages with money, food items, clothes, and educational materials.
+				 	</span>
+				 </p>
+				 	<a class="btn btn-success donate btn-lg" href="/donate">Donate to these Projects</a>
+			</div>
+		</div>
+
+		<div class="col-lg-6">
+			<div class="holdprojimage2">
+				<img src="https://res.cloudinary.com/nikasemo/image/upload/v1563467303/5d309e0accbfc_pg3gvw.png" class="img-fluid" style="margin-top: 30px;">
+			</div>
+			</div>
+
+	</div>
+
+
+	<!-- <div class="row no-gutters" style="margin-top: 40px; margin-bottom: 0px;">
+
+		<div class="col-lg-6">
+			<div class="holdprojtext">
+				<br>
+				<h2 style="font-family: 'Exo 2', sans-serif; text-align: left; color: #282896; font-size: 25px;">Pending Project 2</h2>
 				 <hr align="left" width="10%" class="divederlined">
 				 <p style="font-weight: 300;">Construction of mechanized boreholes and an education on water conservation in Gomoa Osedze.</p>
 				 <p style="font-size: 16px; font-weight: 300;">
@@ -55,11 +101,13 @@
 
 		<div class="col-lg-6">
 			<div class="holdprojimage2">
-				<img src="https://res.cloudinary.com/nikasemo/image/upload/v1563467303/5d309e0accbfc_pg3gvw.png" class="img-fluid">
+				<img src="https://res.cloudinary.com/nikasemo/image/upload/v1563467303/5d309e0accbfc_pg3gvw.png" class="img-fluid" style="margin-top: 30px;">
 			</div>
 			</div>
 
-	</div>
+	</div> -->
+
+</div>
 
 
 </section>
