--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -342,7 +342,7 @@ box-shadow: 0px 1px 3px 2px rgba(0,0,0,0.09);
           </ul>
            <ul class="navbar-nav ml-auto">
            	<li class="nav-item">
-              <a class="btn btn-primary btn-lg donatebutton" href="/donate" target="_blank">Donate</a>
+              <a class="btn btn-primary btn-lg donatebutton" href="/donate">Donate</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#!" target="_blank"><span><i class="fa fa-facebook-official" style="margin-left: 9px; color: #2be0f5;" aria-hidden="true"></i></span></a>
