--- a/app/views/static_pages/pendingprojects.html.erb
+++ b/app/views/static_pages/pendingprojects.html.erb
@@ -56,7 +56,8 @@
 				 	West Africa, Ghana</span><br>
 				 	<span>
 				 		As part of our quest to put smiles on the faces of the needy, Hydro4Life intends to touch the lives of underprivileged orphans in rural African communities. This project will focus specifically on supporting orphanages with money, food items, clothes, and educational materials.
-				 	</span>
+				 	</span><br>
+				 	<img src="https://res.cloudinary.com/nikasemo/image/upload/v1565183345/orphanage_sg6p6p.jpg" class="img-fluid" style="margin-top: 30px;">
 				 </p>
 				 	<a class="btn btn-success donate btn-lg" href="/donate">Donate to these Projects</a>
 			</div>
