--- a/app/views/static_pages/pendingprojects.html.erb
+++ b/app/views/static_pages/pendingprojects.html.erb
@@ -50,10 +50,10 @@
 				 	</span>
 				 </p>
 				 <br>
-				 <p style="font-weight: 500;">Supporting Orphanages accross the country.</p>
+				 <p style="font-weight: 500;">Supporting Orphanages across the continent.</p>
 				 <p style="font-size: 16px; font-weight: 300;">
 				 	<span><i class="fa fa-globe" style="margin-right: 9px; color: #282896;" aria-hidden="true"></i>
-				 	West Africa, Ghana</span><br>
+				 	Africa</span><br>
 				 	<span>
 				 		As part of our quest to put smiles on the faces of the needy, Hydro4Life intends to touch the lives of underprivileged orphans in rural African communities. This project will focus specifically on supporting orphanages with money, food items, clothes, and educational materials.
 				 	</span><br>
